(chores) camel-digitalocean: use unmodifiable list when possible